# ResourceGuard

./: CMakeLists.txt  README.md
include/: ResourceGuard.h
test/: CMakeLists.txt  testResourceGuard.cpp  testResourceGuardModern.cpp  testSingleResourceGuard.cpp  testSingleResourceGuardModern.cpp
